fixed alignmnt of Mr. T

--- a/assets/styles/auth.sass
+++ b/assets/styles/auth.sass
@@ -46,9 +46,8 @@
       text-align: center
 
     .mascot
-      display: inline-block
-      margin: 0 0 50px 190px
-      width: 150px
+      display: block
+      margin: 0 0 50px 0
       height: 150px
-      background-image: inline-image('travis-mascot-150.png')
-      background-size: cover
+      background: inline-image('travis-mascot-150.png') 50% 0 no-repeat
+      background-size: 150px 150px
